# Recommender-system

./: README.md  manage.py  pyproject.toml
recommender_project/: asgi.py  settings.py  urls.py  wsgi.py
