[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recommender-system"
version = "0.1.0"
description = "E-commerce recommender system with Django, PyTorch, and MLflow"
authors = [{name = "Aliaksandr Marchuk", email = "aliaksandrmarchuk369@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "psycopg2-binary>=2.9",
    "torch>=2.0",
    "mlflow>=2.8",
    "pandas>=2.0",
    "numpy>=1.24",
    "celery>=5.3",
    "redis>=5.0",
    "django-celery-results>=2.5",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "black>=23.0",
    "flake8>=6.0",
    "pre-commit>=3.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]